# rust-Portfolio-lakmal-ya

./: .gitignore  BLOG_AUTOMATION.md  Cargo.toml  README.md
.github/workflows/: build-and-deploy.yml  update-blog.yml
scripts/: build.ps1  deploy.ps1
src/: main.rs
static/js/: main.js
templates/: index.html
terraform/: main.tf  terraform.tfvars.example  variables.tf
